[gd_scene load_steps=45 format=3 uid="uid://ig7uinydt0ke"]

[ext_resource type="Script" path="res://scenes/script/main_character.gd" id="1_00roc"]
[ext_resource type="Texture2D" uid="uid://b4fk3fwt6bmwi" path="res://Assets/Character/Attack/Attack-01-Sheet.png" id="2_8dq5r"]
[ext_resource type="Texture2D" uid="uid://goib0oq03ubr" path="res://Assets/Character/Idle/Idle-Sheet.png" id="2_rc0mv"]
[ext_resource type="Texture2D" uid="uid://b7wwp35tvkmc3" path="res://Assets/Character/Jump/Jump-All-Sheet.png" id="2_tpfvp"]
[ext_resource type="Texture2D" uid="uid://bhmjcv8scp264" path="res://Assets/Character/Run/Run-Sheet.png" id="4_d1vky"]
[ext_resource type="AudioStream" uid="uid://ct5rofnuldh30" path="res://Assets/Music/Sounds/07_human_atk_sword_3.ogg" id="6_h6bhe"]
[ext_resource type="AudioStream" uid="uid://mnyv5p30gnts" path="res://Assets/Music/Sounds/15_human_dash_1.wav" id="7_kpr2r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ke8x4"]
radius = 15.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_d1ctf"]
atlas = ExtResource("2_8dq5r")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qinbo"]
atlas = ExtResource("2_8dq5r")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp2p4"]
atlas = ExtResource("2_8dq5r")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8m68"]
atlas = ExtResource("2_8dq5r")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vds8m"]
atlas = ExtResource("2_8dq5r")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ov2"]
atlas = ExtResource("2_8dq5r")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouuqq"]
atlas = ExtResource("2_8dq5r")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s6cn"]
atlas = ExtResource("2_8dq5r")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc215"]
atlas = ExtResource("2_rc0mv")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vr2m"]
atlas = ExtResource("2_rc0mv")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmlrf"]
atlas = ExtResource("2_rc0mv")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f3r0"]
atlas = ExtResource("2_rc0mv")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaw7y"]
atlas = ExtResource("2_tpfvp")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0b45"]
atlas = ExtResource("2_tpfvp")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lof6h"]
atlas = ExtResource("2_tpfvp")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bycj"]
atlas = ExtResource("2_tpfvp")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdgnq"]
atlas = ExtResource("2_tpfvp")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh6a0"]
atlas = ExtResource("2_tpfvp")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_588pr"]
atlas = ExtResource("2_tpfvp")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pkni"]
atlas = ExtResource("2_tpfvp")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghla6"]
atlas = ExtResource("2_tpfvp")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i06tg"]
atlas = ExtResource("2_tpfvp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd1eb"]
atlas = ExtResource("2_tpfvp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqsan"]
atlas = ExtResource("2_tpfvp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_18fh5"]
atlas = ExtResource("2_tpfvp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v0kl"]
atlas = ExtResource("2_tpfvp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr6hc"]
atlas = ExtResource("4_d1vky")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq2fo"]
atlas = ExtResource("4_d1vky")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgr1c"]
atlas = ExtResource("4_d1vky")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxwq4"]
atlas = ExtResource("4_d1vky")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jm5a"]
atlas = ExtResource("4_d1vky")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_exsww"]
atlas = ExtResource("4_d1vky")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_04xk3"]
atlas = ExtResource("4_d1vky")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xt22"]
atlas = ExtResource("4_d1vky")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_06xe2"]
animations = [{
"frames": [{
"duration": 0.3,
"texture": SubResource("AtlasTexture_d1ctf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qinbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8m68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vds8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6ov2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouuqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s6cn")
}],
"loop": true,
"name": &"attack_anim",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vr2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmlrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f3r0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_aaw7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0b45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lof6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bycj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdgnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh6a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_588pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pkni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghla6")
}],
"loop": true,
"name": &"jump_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i06tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd1eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqsan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18fh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v0kl")
}],
"loop": true,
"name": &"jump_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr6hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq2fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgr1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxwq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jm5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exsww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04xk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xt22")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ptuj"]
size = Vector2(92, 56)

[node name="Main_char" type="CharacterBody2D"]
collision_layer = 16385
collision_mask = 16385
script = ExtResource("1_00roc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 524289
visibility_layer = 524291
shape = SubResource("CapsuleShape2D_ke8x4")
debug_color = Color(0.667279, 0, 0.280906, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(1, 1.0125)
sprite_frames = SubResource("SpriteFrames_06xe2")
animation = &"attack_anim"
autoplay = "idle"
frame_progress = 0.392406

[node name="HitMain" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16513
collision_mask = 16513

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitMain"]
position = Vector2(4, -3)
shape = SubResource("RectangleShape2D_2ptuj")
debug_color = Color(0.726862, 0.239797, 1, 0.42)

[node name="sfx_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_h6bhe")
bus = &"SFX"

[node name="sfx_dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kpr2r")
bus = &"SFX"

[connection signal="body_entered" from="HitMain" to="." method="_on_hit_main_body_entered"]
[connection signal="body_exited" from="HitMain" to="." method="_on_hit_main_body_exited"]
